<resources>
    <string name="app_name">DoctorConference</string>
    <string name="title_activity_login2">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main_dashboard">MainDashboard</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="topics_title">Topics Title</string>
    <string name="topics_details">Topics Details</string>

    <string name="first_name">Conference Title</string>
    <string name="last_name">Conference Date</string>
    <string name="blood_group">Blood Group</string>
    <string name="email_address">Email Address</string>
    <string name="blood_patient">Blood Patient</string>
    <string name="blood_donar">Blood Donor</string>
    <string name="err_msg_name">Enter your name</string>
    <string name="add_record">Add New Conference</string>
    <string name="contact_number">Contact Number</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="success">Success</string>
    <string name="item_removed">Item Removed</string>

</resources>
