<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@xml/layout_dialog_box"
        android:orientation="vertical"
        android:layout_margin="10dp"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="5dp"
            android:text="@string/add_record"
            android:textColor="#111111"
            android:textSize="15sp"
            android:textStyle="bold|normal"
            android:typeface="normal" />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/title"
                android:layout_marginTop="2dp"
                android:layout_width="match_parent"
                android:textColor="#000000"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/first_name" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_marginTop="2dp"
                android:textColor="#000000"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/last_name" />
        </android.support.design.widget.TextInputLayout>


        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/submit">
            </Button>
            <Button
                android:id="@+id/buttoncancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel"
                tools:ignore="ButtonOrder">
            </Button>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>